--- a/templates/create_playlist.html
+++ b/templates/create_playlist.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% load static %} {% block content%}
+{% extends 'base.html' %}
+{% load static %}
+{% block content%}
 <body>
   {% csrf_token %}
   <section id="create_playlist" style = "background-image: url('{% static 'svg/Sprinkle.svg' %}');">
